// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modular-css-aliases should be usable as a modular-css resolver 1`] = `
Object {
  "one/sub/sub.css": Object {
    "sub": "sub",
  },
  "start.css": Object {
    "rule": "two rule",
    "sub": "\\"sub\\"",
  },
  "two/two.css": Object {
    "two": "two",
  },
}
`;

exports[`modular-css-aliases should fall through to the default resolver 1`] = `
Object {
  "one/one.css": Object {
    "rule": "two rule",
    "sub": "\\"sub\\"",
  },
  "one/sub/sub.css": Object {
    "sub": "sub",
  },
  "two/two.css": Object {
    "two": "two",
  },
}
`;
